@startuml

title __TP2D's Class Diagram__\n


    namespace TP2D {
      class TP2D.AnimatedThings {
          + AnimatedThings()
          + AnimatedThings()
      }
    }

  


    namespace TP2D {
      class TP2D.Level {
          - height : int
          - map : char[][]
          - renderList : ArrayList<Things>
          - width : int
          + Level()
          + displayLevelInConsole()
          + getRenderList()
          - respawnListOfThings()
      }
    }

  


    namespace TP2D {
      class TP2D.DynamicThings {
          + DynamicThings()
          + DynamicThings()
      }
    }

  


    namespace TP2D {
      class TP2D.GameRender {
          + GameRender()
          # paintComponent()
      }
    }

  


    namespace TP2D {
      class TP2D.Hero {
          {static} - instance : Hero
          {static} + getInstance()
          - Hero()
      }
    }

  

    namespace TP2D {
      class TP2D.HitBox {
          - height : double
          - name : String
          - width : double
          - x : double
          - y : double
          + HitBox()
          + getX()
          + getY()
          + intersect()
      }
    }

  


    namespace TP2D {
      class TP2D.MainInterface {
          + MainInterface()
          {static} + main()
      }
    }

  


    namespace TP2D {
      class TP2D.SolidThings {
          + SolidThings()
          + SolidThings()
      }
    }

  


    namespace TP2D {
      class TP2D.Things {
          # height : int
          # image : Image
          # width : int
          # x : int
          # y : int
          + Things()
          + Things()
          + draw()
      }
    }

  


    namespace TP2D {
      class TP2D.TileManager {
          - heigth : int
          - tileSheet : BufferedImage
          - tiles : Image[][]
          - width : int
          + TileManager()
          + TileManager()
          + getHeigth()
          + getTile()
          + getWidth()
          - setTiles()
      }
    }

  

  TP2D.AnimatedThings -up-|> TP2D.SolidThings
  TP2D.Level o-- TP2D.TileManager : tileManager
  TP2D.DynamicThings -up-|> TP2D.AnimatedThings
  TP2D.GameRender -up-|> javax.swing.JPanel
  TP2D.GameRender o-- TP2D.Level : Level
  TP2D.GameRender o-- TP2D.Hero : hero
  TP2D.Hero -up-|> TP2D.DynamicThings
  TP2D.MainInterface -up-|> javax.swing.JFrame
  TP2D.MainInterface o-- TP2D.Level : Level
  TP2D.MainInterface o-- TP2D.Hero : hero
  TP2D.MainInterface o-- TP2D.GameRender : panel
  TP2D.SolidThings -up-|> TP2D.Things
  TP2D.SolidThings o-- TP2D.HitBox : hitBox


right footer
(c) Antoine Tauvel pour 2D ENSEA

endfooter

@enduml
